# LifeLens

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  STATUS.md  project.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: update-project.md
.github/workflows/: ci.yml
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/kotlin/com/lifelens/: MainActivity.kt
android-app/app/src/main/kotlin/com/lifelens/data/: AppDatabase.kt  PhotoDao.kt  PhotoEntity.kt  PhotoRepository.kt
android-app/app/src/main/kotlin/com/lifelens/navigation/: AppNavigation.kt
android-app/app/src/main/kotlin/com/lifelens/ui/: Labels.kt  PhotoViewModel.kt
android-app/app/src/main/kotlin/com/lifelens/ui/screen/: CameraScreen.kt  GalleryScreen.kt
android-app/app/src/main/kotlin/com/lifelens/ui/theme/: Theme.kt
android-app/app/src/main/res/drawable/: ic_launcher_foreground.xml
android-app/app/src/main/res/values/: strings.xml  themes.xml
android-app/gradle/: libs.versions.toml
tests/: test_toy_model.py
training/: train.py
